--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -5,31 +6,70 @@
     list-style: none;
     box-sizing: border-box;
 }
+
+html{
+    overflow-x: hidden;
+}
+body, html { overflow-x:hidden; }
+
+ @media (max-width: 900px){
+    #nav-bar ul li{
+        display: none;
+    }
+
+    .home header img{
+        height: 55%;
+        
+    }
+    #slogan h1{
+        padding-top: 12rem;
+        padding-right: -100px;
+        font-size: 2.5rem;
+    }
+ }
+ 
 /* home */
 .home{
-    height: 100vh;
-    background-color: aqua;
-}
-/* navegacao */
-nav {
     display: flex;
-    background-color: brown;
-    height: 150px;
-    align-items: flex-end;
-    justify-content: flex-end;
+    height: 100vh;
+    flex-direction: column;
+    background-image: url("/images/banner.png");
+    background-repeat: no-repeat, repeat;
+    background-size: cover;
 }
 
-nav ul{
-    width: 35vw;
+.home header img{
+    padding: 60px 0px 0px 100px;
+}
+
+#slogan{
+    align-self: flex-end;
+    padding-top: 15%;
+    padding-right: 10%;
+    color: blanchedalmond;
+    font-size: 4rem;
+}
+
+/* navegacao */
+
+.home header{
     display: flex;
-    margin-right: 100px;
-    background-color: darkblue;
     justify-content: space-around;
 }
 
+nav {
+    height: 13rem;
+}
+
+nav ul{
+    width: 50vw;
+    padding-top: 70px;
+}
+
 nav ul li{
-    display: flex;
-    padding-right: 20px;
+    display: inline;
+    padding: 0px 40px 0px 40px;
+
 }
 
 nav ul li a{
